cmake_minimum_required(VERSION 3.16)
project(untitled1)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled1 main.cpp BinarySearchTree.cpp BinarySearchTree.h Group.cpp Group.h library.cpp library.h main.cpp player.cpp player.h SquidGame.cpp SquidGame.h )
#add_executable(untitled1 main1.cpp BinarySearchTree.h BinarySearchTree.cpp)